Refactor testsuite to use WildFly Full