@@ -25,15 +25,22 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>${version.httpclient}</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 
   <profiles>
     <profile>
-      <id>wildfly-servlet</id>
+      <id>wildfly</id>
       <activation>
         <property>
           <!-- use property rather than activeByDefault, see https://issues.apache.org/jira/browse/MNG-4917 -->
-          <name>!noWildflyServlet</name>
+          <name>!noWildfly</name>
         </property>
       </activation>
       <dependencies>
@@ -53,7 +60,7 @@
                 <jboss.options>${jboss.extra.opts}</jboss.options>
               </systemProperties>
               <environmentVariables>
-                <JBOSS_HOME>${project.build.directory}/wildfly-servlet-${version.wildfly}</JBOSS_HOME>
+                <JBOSS_HOME>${project.build.directory}/wildfly-${version.wildfly}</JBOSS_HOME>
               </environmentVariables>
             </configuration>
           </plugin>
@@ -71,7 +78,7 @@
                   <artifactItems>
                     <artifactItem>
                       <groupId>org.wildfly</groupId>
-                      <artifactId>wildfly-servlet-dist</artifactId>
+                      <artifactId>wildfly-dist</artifactId>
                       <version>${version.wildfly}</version>
                       <type>zip</type>
                       <overWrite>false</overWrite>
@@ -91,7 +98,7 @@
         <jdk>[11,)</jdk>
       </activation>
       <properties>
-        <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+        <jboss.extra.opts>--add-modules java.se --add-opens=java.base/java.util=ALL-UNNAMED</jboss.extra.opts>
       </properties>
     </profile>
   </profiles>
